# AFP-Ants

./: FunctionalAnts.cabal  README.md
FastAnts/: Cargo.toml
FastAnts/src/: ant.rs  instruction.rs  main.rs  simulator.rs  test.rs  test_data.rs  world.rs
FastAnts/src/util/: bitfield.rs  mod.rs  rng.rs
app/: Main.hs
src/: Ant.hs  Function.hs  Instruction.hs  InstructionRecursive.hs  Language.hs  Lib.hs  MultilineStrings.hs  Simulator.hs  Worlds.hs  uniqsupply.hs
src/Language/: Build.hs  Codegen.hs  Compiler.hs  Examples.hs  Fragment.hs  Function.hs  Instruction.hs  Optimizer.hs  ReinierFunction.hs
src/Simulator/: GamePlay.hs  Options.hs  ReadInstructions.hs  ReadWorld.hs  Runner.hs
test/: Spec.hs  Util.hs
test/Spec/: Codegen.hs  Fragment.hs  Optimizer.hs
