name:                FunctionalAnts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FunctionalAnts#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Instruction
                     , Simulator
                     , Simulator.GamePlay
                     , Simulator.Options
                     , Simulator.ReadWorld
                     , Simulator.ReadInstructions
                     , Simulator.Runner
                     , Worlds
  other-modules:       MultilineStrings
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , array
                     , containers
                     , template-haskell
  default-language:    Haskell2010

executable FunctionalAnts-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FunctionalAnts
  default-language:    Haskell2010

test-suite FunctionalAnts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FunctionalAnts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FunctionalAnts
